4.04_01 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Ensure documentation is generated using same perl as the build (Github issue #45)
- Pass '--action' through macro parsing (Github issue #42)
- Workaround for glitch in KDE where windows can become unmoveable (Github issue #46) (thanks to Brandon Perkins)
- Add in '--quiet | -Q ' option to reduce output in certian scenarios

4.04 2015-11-03 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Include bash completion script in distribution (Github issue #29)
- Allow re-adding closed session (Github issue #27 - thanks to Andrew Stevenson)
- Allow sorting windows in natural order (Github issue #28 - thanks to Andrew Stevenson)
- Fix links in metadata files to trackers (Github issue #41)
- Fix ctel and ccon not working correctly (Github issue #35)
- Amend t/10host.t to use a random hostname to prevent clashes (Github issue #23)
- Amend copyright message in README to match all other files for the perl license (Github issue #44)

4.03_06 2015-01-31 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Remove references to 'logmsg' preventing the history window from working (thanks to Andrew Stevenson)

4.03_05 2014-12-20 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Fix options parsing tests picked up via cpantesters on different version of perl

4.03_04 2014-12-12 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Do not use system perl but whatever is found in PATH (to stop breaking perlbrew based builds)
- Warn when the configured terminal isn't installed/found
- Don't show 'Opening to:' when no servers are given

4.03_03 2014-09-28 Duncan Ferguson <duncan_ferguson@user.sf.net>
- Force tests to have English locale when user has something else set (Github issue: 10) (thanks to Emanuele Tomasi)
- Skip permissions check test when run as root as the results are invalid (Github issue: 11) (thanks to Deny Dias)