@@ -1,0 +1,16 @@
+#!/usr/bin/env perl
+use strict;
+use warnings;
+
+use FindBin;
+use lib $FindBin::Bin. '/../lib';
+use lib $FindBin::Bin. '/../lib/perl5';
+use App::ClusterSSH;
+
+my $app = App::ClusterSSH->new();
+
+$app->options->add_common_ssh_options;
+$app->options->add_common_session_options;
+$app->run();
+
+1;
